dimagi-SalesforceFB/src/objects/Accounting_CreditLine__c.object
<CustomObject>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Accounting_Subscription__c</referenceTo>
        <relationshipName>Accounting_creditline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>account</label>
        <referenceTo>Accounting_BillingAccount__c</referenceTo>
        <relationshipName>Accounting_creditline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>balance__c</fullName>
        <label>balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>feature_type__c</fullName>
        <label>feature_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <label>product_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_CreditLine</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Subscription__c</columns>
        <columns>balance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Credit Line#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_CreditLine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>